; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_bnx2.c_bnx2_shmem_wr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_bnx2.c_bnx2_shmem_wr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2 = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnx2*, i64, i64)* @bnx2_shmem_wr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2_shmem_wr(%struct.bnx2* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.bnx2*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.bnx2* %0, %struct.bnx2** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %8 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %9 = getelementptr inbounds %struct.bnx2, %struct.bnx2* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %5, align 8
  %12 = add nsw i64 %10, %11
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @bnx2_reg_wr_ind(%struct.bnx2* %7, i64 %12, i64 %13)
  ret void
}

declare dso_local i32 @bnx2_reg_wr_ind(%struct.bnx2*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
